[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "ox"
dist-name = "ox-parser"
author = "Fábio Macêdo Mendes"
author-email = "fabiomacedomendes@gmail.com"
home-page = "http://github.com/fabiommendes/ox/"
requires-python = ">=3.6"
description-file = "README.rst"

# Classifiers (see https://pypi.python.org/pypi?%3Aaction=list_classifiers)
classifiers = [
	"Intended Audience :: Developers",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Topic :: Software Development :: Libraries",
]
requires = [
	"lark-parser",
	"sidekick~=0.5.1",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "mock",
    "manuel",
]
doc = [
    "sphinx"
]
dev = [
    "flake8",
    "black",
]

[tool.flit.metadata.urls]
Documentation = "https://ox.readthedocs.io/en/latest/"

[tool.flit.scripts]
ox = "ox.cli:main"
